# ohlcv-data-downloader

./: .bandit  .env.example  .gitignore  AAPL_yahoo.csv  AAPL_yahoo_finance.csv  AAPL_yahoo_metadata.json  AGENTS.md  OPERATIONS.md  PROJECT_SUMMARY.md  README.md  SECURITY.md  SECURITY_AUDIT_RESPONSE_SUMMARY.md  SECURITY_CHECKLIST.md  VALIDATION_STATUS.md  audit.py  config.py  demo.py  mypy.ini  ohlcv_cli.py  ohlcv_downloader.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-secure.txt  requirements.txt  secure_ohlcv_cli.py  secure_ohlcv_downloader.py  security_test_demo.py  setup.cfg  setup.py  utils.py
.codex/: config.toml
config/: certificates.json
monitoring/: security_monitor.py
scripts/: performance_baseline.py  run_validation.py
src/secure_ohlcv_downloader/: __init__.py  api_client.py  certificate_manager.py  configuration.py  credentials.py  downloader.py  encryption.py  exceptions.py  file_lock.py  file_manager.py  monitoring.py  validation.py
tests/: conftest.py  test_architecture_refactor.py  test_audit.py  test_caching.py  test_certificate_management.py  test_cli_date_validation.py  test_cli_run.py  test_config.py  test_credentials.py  test_encryption.py  test_memory_management.py  test_rate_limiting.py  test_retention.py  test_secure_path.py  test_security_monitor.py  test_ssl_pinning.py  test_validation.py
tests/architecture/: test_cross_platform_locking.py
tests/integration/: test_security_integration.py
tests/performance/: test_async_operations.py
tests/security/: test_cleanup_expired_files.py  test_redos_protection.py  (+6 more)
(+1 files in other folders)
